# vulkan-human

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  create-projectfiles.sh  create_makefiles.sh  install_deps.sh  install_vcpgk_deps.sh
assets/: torus.gltf  torus_smooth.gltf
src/: CMakeLists.txt  check.h  engine.cpp  engine.h  main.cpp  mesh.cpp  mesh.h  swapchain.cpp  swapchain.h
src/components/: CMakeLists.txt  camera.h  coordsys.h  entity.h  visual.cpp  visual.h
src/components/tests/: CMakeLists.txt  coordsys.t.cpp  entity.t.cpp  visual.t.cpp
src/engine/: CMakeLists.txt  check.h  core.cpp  core.h  engine.cpp  engine.h  mesh.cpp  mesh.h  pass.h  pipeline.cpp
src/inputsystem/: CMakeLists.txt  inputsystem.cpp  inputsystem.h
src/pipelines/: basic_pipeline.cpp  basic_pipeline.h
src/rendersystem/: CMakeLists.txt  core.cpp  core.h  mesh.cpp  mesh.h  pass.cpp  pass.h  pipeline.cpp  pipeline.h  rendersystem.cpp  rendersystem.h  swapchain.cpp  swapchain.h
src/rendersystem/shaders/: CMakeLists.txt  mesh.frag  mesh.vert
src/rendersystem/tests/: CMakeLists.txt  mesh.t.cpp
src/shaders/: CMakeLists.txt  triangle.frag  triangle.vert
test/: CMakeLists.txt
tests/: CMakeLists.txt
